# financial-data-warehouse

./: .gitignore  README.md  main.py  pyproject.toml  snowflake-check.py
.github/workflows/: dbt_ci.yml
financial_dbt/: dbt_project.yml
financial_dbt/models/: schema.yml
financial_dbt/models/marts/: fact_daily_prices.sql
financial_dbt/models/staging/: stg_companies.sql  stg_stock_prices.sql
scripts/: ingest_financial_data.py
